Fix: height on mobile screens

--- a/src/style.css
+++ b/src/style.css
@@ -12,3 +12,6 @@
 #cards::-webkit-scrollbar {
   display: none;
 }
+video {
+  height: 1000px;
+}
